lxml changelog
==============

current
=======

Features added
--------------

* Element.getpath() returns an XPath expression to find the node in the tree
  structure

* Error logs now have a ``last_error`` attribute for convenience

* Comment texts can now be changed through the API

Bugs fixed
----------

* Removed public function ``initThreadLogging()``, replaced by more general
  ``initThread()`` which fixes a number of setup problems in threads

* Memory leak when using iconv encoders in tostring/write

* Deep copying Elements and ElementTrees maintains the document information

* Serialization functions now raise LookupError for unknown encodings

* Memory deallocation crash resulting from deep copying elements


1.0.beta (2006-05-18)
=====================

Features added
--------------

* Formatted output via ``pretty_print`` keyword in serialization functions

* XSLT can block access to file system and network via ``XSLTAccessControl``

* ElementTree.write() no longer serializes in memory (reduced memory
  footprint)

* Speedup of Element.findall(tag) and Element.getiterator(tag)

* Support for writing the XML representation of Elements and ElementTrees to
  Python unicode strings via ``etree.tounicode()``

* Support for writing XSLT results to Python unicode strings via ``unicode()``

* Parsing a unicode string no longer copies the string (reduced memory
  footprint)

* Parsing file-like objects now reads chunks rather than the whole file
  (reduced memory footprint)

* Parsing StringIO objects from the start avoids copying the string (reduced
  memory footprint)

* Read-only 'docinfo' attribute in ElementTree class holds DOCTYPE
  information, original encoding and XML version as seen by the parser

* etree module can be compiled without libxslt by commenting out the line
  ``include "xslt.pxi"`` near the end of the etree.pyx source file

* Better error messages in parser exceptions

* Error reporting now also works in XSLT
