@@ -1678,7 +1678,7 @@ class ETreeTestCaseBase(unittest.TestCase):
     def test_parse_file_nonexistent(self):
         parse = self.etree.parse
         self.assertRaises(IOError, parse, fileInTestDir('notthere.xml'))  
-        
+
     def test_parse_file_object(self):
         parse = self.etree.parse
         # from file object
