@@ -30,6 +30,9 @@ class ETreeXSLTTestCase(HelperTestCase):
 ''',
                           st.tostring(res))
 
+    def test_xslt_elementtree_error(self):
+        self.assertRaises(ValueError, etree.XSLT, etree.ElementTree())
+
     def test_xslt_utf8(self):
         tree = self.parse(u'<a><b>\uF8D2</b><c>\uF8D2</c></a>')
         style = self.parse('''\
